--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,94 @@
 /********** TAG SELECTOR **********/
+body {
+    background-color: hsl(257, 40%, 49%);
+    background-image: url('../images/bg-desktop.svg');
+    margin: 60px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+}
 
+br {
+    margin-bottom: 200px;
+}
+
+ion-icon {
+    font-size: 1.5rem;
+    margin: 0 10px;
+}
+
+ion-icon:hover {
+    color: #E882E8;
+}
 
 /********** CLASS SELECTOR **********/
+
+.logo-style {
+    position: relative;
+    width: 20%;
+}
+
+.illustration-img {
+    width: 55%;
+    float: left;
+    margin-right: 50px;
+}
+
+.top-cont {
+    margin: 40px 0;
+}
+
+.head-text {
+    font-size: 2.5rem;
+    font-family: 'Poppins', sans-serif;
+}
+
+.body-text {
+    color: #FAEEFF;
+    font-weight: lighter;
+    line-height: 1.5;
+    letter-spacing: 0.0625rem;
+    text-shadow: 2px 4px 4px rgba(46,91,173,0.6);
+}
+
+.btn {
+    font-family: 'Open Sans', sans-serif;
+    border-radius: 28px;
+    color: hsl(257, 40%, 49%);
+    font-size: 20px;
+    background: #ffffff;
+    padding: 15px 45px 15px 45px;
+    text-decoration: none;
+    border: 0;
+    letter-spacing: 0.0625rem;
+    font-weight: bold;
+  }
+  
+  .btn:hover {
+    background: #E882E8;
+    color: #ffffff;
+    text-decoration: none;
+  }
+
+.mid-cont {
+    width: 80%;
+    margin: auto;
+}  
+
+.btn-cont {
+    margin: 20px 0;
+}
+
+.bot-cont {
+    margin: 100px;
+    text-align: right;
+}
+
+.attribution {
+    font-size: 0.6875rem;
+    text-align: center;
+    color: #a998a9;
+}
+
+.attribution a {
+    color: hsl(228, 45%, 44%); 
+}
